deploy/overlays/openshift/prediction/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prediction-service
spec:
  type: ClusterIP
